--- a/mini-project/index.html
+++ b/mini-project/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-     <div><p>player1</p> <p>player2</p></div>
+     <div><p class="p1">player1</p> <p class="p2">player2</p></div>
     </main>
 
     <footer>
