added more code

--- a/mini-project/index.html
+++ b/mini-project/index.html
@@ -6,18 +6,18 @@
     <title>Dice Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body >
     <header>
         <h1>Dice Game Using Html,Css and Javacript</h1>
     </header>
 
     <main>
-     <div><p class="p1">player1</p> <p class="p2">player2</p></div>
+     <div ><p class="p1">player1 </p> <p class="p2">player2 </p></div>
     </main>
 
     <footer>
-    <button type="button">start game</button>
+    <button type="button" >start game</button>
     </footer>
-    <!--<Script src="dicegame.js"></Script>-->
+    <Script src="dicegame.js"></Script>
 </body>
 </html>
